# Everything_Rust

./: README.md
web/axum/todo_list/api/: Cargo.toml
web/axum/todo_list/api/src/: error.rs  main.rs  model.rs
web/rocket/todo_list/api/: Cargo.toml
web/rocket/todo_list/api/src/: main.rs
web/rocket/todo_list/client/: package-lock.json
