[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = {version = "1", features = ["full"]}
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.8"

